--- a/Exercicios - Estruturas_Condicionais/.project
+++ b/Exercicios - Estruturas_Condicionais/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercicios Aula03 - Estruturas_Condicionais</name>
+	<name>Exercicios - Estruturas_Condicionais</name>
 	<comment></comment>
 	<projects>
 	</projects>
