--- a/Aula06/.project
+++ b/Aula06/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercicios - Estruturas de Repetição</name>
+	<name>Aula06</name>
 	<comment></comment>
 	<projects>
 	</projects>
